force-app/main/default/objects/Part_Order__c/Part_Order__c.object-meta.xml
<CustomObject>
    <label>Part Order</label>
    <nameField>
        <displayFormat>O-{00000}</displayFormat>
        <label>Part Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts Order</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>