force-app/main/default/objects/Part_Order__c/fields/Client_Order__c.field-meta.xml
<CustomField>
    <fullName>Client_Order__c</fullName>
    <label>Client Order</label>
    <referenceTo>Client_Order__c</referenceTo>
    <relationshipLabel>Parts Order</relationshipLabel>
    <relationshipName>Parts_Order</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>