force-app/main/default/objects/Part_Order__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Parts_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>